--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&family=Oswald:wght@700&family=Rubik:wght@800&display=swap");
+
 body {
   background-color: #000022;
-}
-input[type="range"] {
-  appearance: none;
-  width: calc(100% + 1rem + 4px);
-  background: transparent;
-  position: absolute;
+  color: white;
+  min-width: max-content;
 }
 
-input[type="range"]:focus {
-  outline: none;
-}
-
-input[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  border: 2px solid black;
-  height: 1rem;
-  width: 1rem;
-  background: white;
-  cursor: pointer;
-  transition: all 300ms;
-  pointer-events: all;
-}
-
-input[type="range"]::-webkit-slider-thumb:hover {
-  background-color: aqua;
-  box-shadow: 0 0 0 0.375rem white;
+#root {
+  padding: 0 2rem;
 }
