--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,32 @@
   margin-left: 0.25rem;
 }
 
+.footer-container {
+  width: 95%;
+  border-top: 2px solid grey;
+  margin: 2rem auto auto;
+  padding: 1rem;
+  border-radius: 3px;
+  box-sizing: border-box;
+  display: grid;
+  place-items: center;
+}
+
+.footer-content {
+  text-transform: uppercase;
+  color: #f5f5f5;
+}
+
+.footer-content--copyright-symbol,
+.footer-content__author-heading {
+  margin: 0 0.25rem;
+}
+
+.footer-content__author-heading {
+  display: inline-block;
+  font-size: inherit;
+}
+
 @media (min-width: 700px) {
   .input-group__size-customization-wrapper {
     flex-direction: row;
